--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,21 +1,31 @@
-name: Generate Pacman Contribution Graph
+name: Generate pacman animation
 
 on:
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *"
+
+  push:
+    branches:
+    - main
 
 jobs:
   generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-    steps:
-      - name: Generate pacman contribution graph
-        uses: Platane/pacman-contribution-graph@v2
-        with:
-          github_user_name: emilainezx
+    timeout-minutes: 5
 
-      - name: Push output to branch
-        uses: crazy-max/ghaction-github-pages@v4
+    steps:
+      - name: generate pacman-contribution-graph.svg
+        uses: abozanona/pacman-contribution-graph@main
+        with:
+          github_user_name: ${{ github.repository_owner }}
+
+
+      - name: push pacman-contribution-graph.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
